# rust-elm-grpc

./: .gitignore  readme.md
proto/: SimpleCommunication.proto
remote-process-rust/: Cargo.toml
remote-process-rust/src/: main.rs
webapp-companion-wasm/: Cargo.toml  build.rs
webapp-companion-wasm/src/: lib.rs
webapp-elm/src/: Main.elm
