[package]
name = "webapp-companion-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
grpc-web-client = "0.1.2"
tonic = { version = "0.7", default-features = false, features = ["codegen", "prost"] }
wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"] }
prost = "0.10"

[build-dependencies]
tonic-build = { version = "0.7", default-features = false, features = ["prost"] }
